--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
+<!doctype html>
 <html>
-  <head>
-    <title>Hello</title
-   </head>
-   <body>
-    <h1>Hello I am Dalchandra Sharma</h1>
-   </body>
- </html>
+	<head>
+		<meta charset="utf-8">
+		<title>Ball Game</title>
+		<style>
+			#canvas
+			{
+				background-color: aqua;
+			}
+		</style>
+	</head>
+	<body>
+		<h3 id="score">Click For Start</h3>
+		<canvas id="canvas"></canvas>
+		<script type="text/javascript" src="main.js"></script>
+	</body>
+</html>
